--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Minimal Mistakes
 locale:           en_US
-url:              //mmistakes.github.io/minimal-mistakes
+url:              //lcustodio.github.io
 
 
 # Jekyll configuration
@@ -26,24 +26,19 @@ kramdown:
 
 # Site owner
 owner:
-  name: Michael Rose
+  name: Luis Custodio
   avatar: bio-photo.jpg
-  bio: "Just another boring, time traveling, tattooed, designer from Buffalo New York."
-  email: michael@mademistakes.com
-  disqus-shortname: minimalmistakes
-  twitter: mmistakes
-  facebook: michaelrose
+  bio: "A automation oriented developer, travelling the world"
+  email: me@luiscustodio.com
+  disqus-shortname: 
+  twitter: lcustodio
+  facebook: luisfcustodio
   google:
-    plus: MichaelRoseDesign
-    analytics: UA-2011187-3
-    verify: UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y
-    ad-client: ca-pub-7328585512091257
-    ad-slot: 7855747535
-  bing-verify: D81F4C18A6CB3018F64D7C827D953DFD
-  github: mmistakes
+  bing-verify: 
+  github: lcustodio
   stackoverflow:
   linkedin:
-  instagram: mmistakes
+  instagram: 
   lastfm:
   tumblr:
   pinterest:
