changing the page config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Minimal Mistakes
 locale:           en_US
-url:              //lcustodio.github.io
+url:              http://lcustodio.github.io
 
 
 # Jekyll configuration
