Fixing links and removing not used images

--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,12 @@ owner:
   bio: "A automation oriented developer, travelling the world"
   email: blog@luiscustodio.com
   disqus-shortname: 
-  twitter: lcustodio
+  twitter: lfcustodio
   facebook:
   google:
   bing-verify:
   github: lcustodio
-  stackoverflow: http://stackoverflow.com/users/139637/custodio
+  stackoverflow: 139637/custodio
   linkedin: #username
   xing: #username
   instagram: #username
