Updating to markdown according to github wishes

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:
 
 #permalink:   /:categories/:title/
 permalink:   pretty
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 
 sass:
