modifying base path

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "luiscustodio",
   "author": "Luis Custodio <blog@luiscustodio.com>",
-  "homepage": "http://www.luiscustodio.com",
+  "homepage": "https://www.luiscustodio.com",
   "repository": {
     "type": "git",
     "url": "git@github.com:lcustodio/lcustodio.github.io.git"
