Modifying the base url

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title:            The of Process of coding
 locale:           en_US
-#url:              http://luiscustodio.com
-url:
+url:              https://luiscustodio.com
+#url:
 
 # Jekyll configuration
 
